@@ -103,6 +103,9 @@ public class TestLang extends TestCase {
         for (String k : langKeys) {
             if (!master.getKeys().contains(k))
                 obsolete.add(k);
+
+            String val = langResources.get(k);
+            assertFalse(l+"; "+k+"; not trimmed: >" + val + "<", !val.contains("\n") && !val.equals(val.trim()));
         }
         if (!obsolete.isEmpty()) {
             System.out.println("Obsolete language keys for: " + l);
@@ -113,12 +116,12 @@ public class TestLang extends TestCase {
         }
 
         ArrayList<String> modified = new ArrayList<>();
-        de.neemann.gui.language.Resources origKeys =
+        de.neemann.gui.language.Resources origResource =
                 new de.neemann.gui.language.Resources(
                         getClass().getClassLoader().getResourceAsStream("lang/lang_" + l.getName() + "_ref.xml"));
         for (String k : master.getKeys()) {
             String m = master.get(k);
-            String o = origKeys.get(k);
+            String o = origResource.get(k);
             if (m != null && o != null && !m.equals(o))
                 modified.add(k);
         }
@@ -127,14 +130,12 @@ public class TestLang extends TestCase {
             System.out.println("Modified language keys for: " + l);
             missing.sort(String::compareTo);
             for (String k : modified) {
-                System.out.println("  key: "+k);
-                System.out.println("    old: "+origKeys.get(k));
-                System.out.println("    new: "+master.get(k));
-                System.out.println("    old: "+langResources.get(k));
+                System.out.println("  key: " + k);
+                System.out.println("    old: " + origResource.get(k));
+                System.out.println("    new: " + master.get(k));
+                System.out.println("    old: " + langResources.get(k));
             }
-
         }
-
     }
 
     public static File getSourceFiles() {
@@ -214,13 +215,17 @@ public class TestLang extends TestCase {
     }
 
     private void addKeysFrom(String lang) {
-        for (String k : bundle.getResources(lang).getKeys()) {
+        final de.neemann.gui.language.Resources resources = bundle.getResources(lang);
+        for (String k : resources.getKeys()) {
             LangSet l = map.get(k);
             if (l == null) {
                 l = new LangSet();
                 map.put(k, l);
             }
             l.add(lang);
+
+            String val = resources.get(k);
+            assertFalse("not trimmed: >" + val + "<", !val.contains("\n") && !val.equals(val.trim()));
         }
 
     }
